project(extract_data_rosbag)
cmake_minimum_required(VERSION 3.5)
find_package(OpenCV 2.4 REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lpthread")
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} main.cc xy2000_lb2000.cpp)
add_executable(mouse test/main.cc)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
target_link_libraries(mouse ${OpenCV_LIBS})